Grinder 2.6.3
-------------

  Fix to recording of short response times from Mikael Suokas.


Grinder 2.6.2
-------------

  Added support for HTTP basic authentication. You can now use two new
  HTTP plugin test parameters, basicAuthenticationUser and
  basicAuthenticationPassword, to specify the appropriate parameters
  for each request. See README for details.

  New HTTP plugin parameter: timeIncludesTransaction. By default the
  time that the HTTP plugin reports is the time it takes for the
  remote server to accept the connection request. When using the times
  as an indicator of user experience, this is usually what you want.
  Sometimes however you are more interested in the time the entire
  HTTP transaction takes, including the time required to read the HTTP
  response over the network. If so, set this parameter to true.

  Removed property grinder.thread.beginCycleSleepTime, as its
  redundant. (Use grinder.test0.sleepTime instead).

  New property: grinder.thread.initialSleepTime. See README for
  details.

  When the property grinder.recordTime is false, the time is no longer
  logged to the data file. (The prime purpose of recordTime is to
  control whether times are _reported_ to the console, in fact times
  are always recorded. This is too subtle for some users ;-) so I've
  made this change for an easy life).

  Reworked the logging code. The visible change is improved logging of
  sub-process events to the controlling terminal.

  Changed the sense of the "-norewriteURLs" TCPSniffer option to make
  it "-rewriteURLs". Rewriting is no longer the default behaviour.


Grinder 2.6.1
-------------

  Various tweaks to the timing code. The response times reported by
  your test scripts will almost certainly be smaller and more correct
  with this version. See doc/Timing.txt for information.

  New property: grinder.recordTime. See the file doc/Timing.txt for
  details.

  New property: grinder.logProcessStreams. See README for details.
