@@ -1,6 +1,8 @@
 Grinder 2.6.3
 -------------
 
+  Console summary table now uses a JTable.
+
   Fix to recording of short response times from Mikael Suokas.
 
 
